<resources>
    <string name="app_name">ACBProyectoAndroid</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="ciclo">Ciclo</string>
    <string name="curso">Curso</string>
    <string name="despacho">Despacho</string>
    <string name="aceptar">Aceptar</string>
    <string name="preferencias">Preferencias</string>
    <string name="profesor">Profesor</string>
    <string name="alumnos">Alumnos</string>
    <string name="nota_media">Nota Media</string>
    <string name="busquedas">Busquedas</string>
    <string name="todos_los_estudiantes">Todos los estudiantes</string>
    <string name="alumnos_totales">Alumnos totales</string>
    <string name="busqueda_por_ciclo">Busqueda por ciclo</string>
    <string name="estudiantes_por_ciclo">Estudiantes por ciclo</string>
    <string name="estudiantes_por_curso">Estudiantes por curso</string>
    <string name="todos_los_profesores">Todos los profesores</string>
    <string name="profesores_totales">Profesores Totales</string>
    <string name="nueva_asignatura">Nueva Asignatura</string>
    <string name="nombre_de_la_asignatura">Nombre de la asignatura</string>
    <string name="numero_de_horas">Numero de horas</string>
    <string name="enviar">Enviar</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="a_adir">Añadir</string>
    <string name="buscar_por_nombre">Buscar por nombre</string>
</resources>
